--- a/MPfm/MPfm.Mac/Windows/XIB/SyncDownloadWindow.xib
+++ b/MPfm/MPfm.Mac/Windows/XIB/SyncDownloadWindow.xib
@@ -312,7 +312,7 @@
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>{{319, 371}, {606, 354}}</string>
-					<boolean value="YES"/>
+					<boolean value="NO"/>
 					<string>MPfmView</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
