Mac: Implemented SyncDownload view; the whole sync process now works on Mac! There are a lot of stats missing though, and canceling doesn't work yet. Added Retina/non-Retina icons for Sync and SyncMenu list views. More layout bug fixes. Fixed alert view title/message.
Related to issue #381.

--- a/MPfm/MPfm.Mac/Windows/XIB/SyncMenuWindow.xib
+++ b/MPfm/MPfm.Mac/Windows/XIB/SyncMenuWindow.xib
@@ -893,6 +893,14 @@
 					<int key="connectionID">184</int>
 				</object>
 				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">actionSync:</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="215444771"/>
+					</object>
+					<int key="connectionID">185</int>
+				</object>
+				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
 						<string key="label">imageView</string>
 						<object class="NSTableCellView" key="source" id="180710029">
@@ -1596,7 +1604,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">184</int>
+			<int key="maxID">185</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
