--- a/MPfm/MPfm.Mac/Windows/XIB/MainWindow.xib
+++ b/MPfm/MPfm.Mac/Windows/XIB/MainWindow.xib
@@ -1908,7 +1908,6 @@
 																					<string key="NSFrame">{{50, 0}, {61, 26}}</string>
 																					<reference key="NSSuperview" ref="947705286"/>
 																					<reference key="NSWindow"/>
-																					<reference key="NSNextKeyView"/>
 																					<string key="NSReuseIdentifierKey">_NS:22</string>
 																					<bool key="NSEnabled">YES</bool>
 																					<object class="NSButtonCell" key="NSCell" id="882474319">
@@ -6323,6 +6322,13 @@
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<string key="NSClassName">MPfmIsPlayingTableCellView</string>
 							</object>
+							<object class="NSCustomView" id="772465047">
+								<nil key="NSNextResponder"/>
+								<int key="NSvFlags">268</int>
+								<string key="NSFrame">{{0, 43}, {22, 96}}</string>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<string key="NSClassName">MPfmTableRowView</string>
+							</object>
 						</object>
 						<reference key="parent" ref="116884751"/>
 					</object>
@@ -6854,6 +6860,11 @@
 						<reference key="object" ref="129938267"/>
 						<reference key="parent" ref="877551154"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">864</int>
+						<reference key="object" ref="772465047"/>
+						<reference key="parent" ref="590075407"/>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -7228,6 +7239,8 @@
 					<string>857.IBPluginDependency</string>
 					<string>858.IBPluginDependency</string>
 					<string>86.IBPluginDependency</string>
+					<string>864.IBPluginDependency</string>
+					<string>864.userInterfaceItemIdentifier</string>
 				</object>
 				<object class="NSArray" key="dict.values">
 					<bool key="EncodedWithXMLCoder">YES</bool>
@@ -7261,6 +7274,7 @@
 					<object class="NSArray">
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<reference ref="553973200"/>
+						<reference ref="772465047"/>
 					</object>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<boolean value="YES"/>
@@ -7648,6 +7662,8 @@
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>NSTableViewRowViewKey</string>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="unlocalizedProperties">
@@ -7662,7 +7678,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">862</int>
+			<int key="maxID">864</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -8009,7 +8025,6 @@
 							<string>btnPlaySelectedSong</string>
 							<string>btnRemoveLoop</string>
 							<string>btnRemoveMarker</string>
-							<string>btnStopLoop</string>
 							<string>cboSoundFormat</string>
 							<string>imageAlbumCover</string>
 							<string>lblAlbumTitle</string>
@@ -8084,7 +8099,6 @@
 							<string>MPfmButton</string>
 							<string>MPfmButton</string>
 							<string>NSButton</string>
-							<string>MPfmButton</string>
 							<string>MPfmButton</string>
 							<string>MPfmButton</string>
 							<string>NSPopUpButton</string>
@@ -8166,7 +8180,6 @@
 							<string>btnPlaySelectedSong</string>
 							<string>btnRemoveLoop</string>
 							<string>btnRemoveMarker</string>
-							<string>btnStopLoop</string>
 							<string>cboSoundFormat</string>
 							<string>imageAlbumCover</string>
 							<string>lblAlbumTitle</string>
@@ -8277,10 +8290,6 @@
 							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">btnRemoveMarker</string>
-								<string key="candidateClassName">MPfmButton</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">btnStopLoop</string>
 								<string key="candidateClassName">MPfmButton</string>
 							</object>
 							<object class="IBToOneOutletInfo">
@@ -8532,14 +8541,6 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/MainWindowController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">NSTableRowView</string>
-					<string key="superclassName">NSView</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/NSTableRowView.h</string>
 					</object>
 				</object>
 			</object>
